# albikirc

./: .gitignore  AGENTS.md  CHANGES.md  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  build-linux.sh  build-macos.sh  pyproject.toml  requirements.txt  things-to-be-done.md
albikirc/: app.py  config.py  event_bus.py  irc_client.py  mac_speech.py
albikirc/ui/: chat_panel.py  connect_dialog.py  help_dialog.py  main_frame.py  preferences_dialog.py  saved_servers_dialog.py
