[project]
name = "albikirc"
version = "0.1.0"
description = "Minimal, accessible IRC client using wxPython"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "wxPython>=4.2.1",
]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]

[project.scripts]
albikirc = "albikirc.app:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools.package-data]
albikirc = ["Sounds/*.wav"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
